[bdist_wheel]
universal = true


[check]
;; metadata = true
;; restructuredtext = true
;; strict = true


[coverage:html]
directory = coverage/html

[coverage:report]
show_missing = true

exclude_lines =
    pragma: no cover
skip_covered = true

[coverage:run]
branch = true
omit =
    conftest.py
    test_*.py
source =
    src/dockerfixtures

[coverage:xml]
;; Used by the CI (so it can collect test-case-wise failure/success stats)
output = coverage.xml


[flake8]
max-line-length = 100
doctests = True
exclude = .git, .eggs, __pycache__, docs/, build/, dist/


[metadata]
name = dockerfixtures
author = Nicolas CANIART
author-email = nicolas@caniart.net
description = Cointainers as Pytest fixture made easy
keywords = docker, testing, fixtures
long-description = file: README.rst, CHANGELOG.rst
license = GPLv2
license-file = COPYING
platform = any
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved ::  License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules
    Typing :: Typed
url = https://github.com/cans/docker-fixtures
version = 0.1.0

[options]
include_package_data = true
install_requires =
    docker~=4.1
packages = find:
package_dir =
    =src
python_requires = >= 3.6, <3.9
setup_requires =
    setuptools~=41.6
    wheel
zip_safe = true

[options.extras_require]
dev =
    coverage
    pdbpp
    pytest
    pytest-cov
    pytest-mock
    Sphinx
    twine
    kafka-python

[options.packages.find]
where = src

[pydocstyle]
match-dir = (?!tests)(?!resources)(?!docs)[^\.].*
match = (?!test)(?!setup)[^\._].*\.py
inherit = false
ignore = D200, D203, D213, D406, D407   # Google conventions

[sdist]
formats = zip, gztar

[tool:pytest]
addopts = -v --ignore src --cov
