[bdist_wheel]
universal = true


[check]
;; metadata = true
;; restructuredtext = true
;; strict = true


[coverage:html]
directory = coverage/html

[coverage:report]
show_missing = true

exclude_lines =
    pragma: no cover
skip_covered = true

[coverage:run]
branch = true
omit =
    conftest.py
    test_*.py
source =
    src/dockerfixtures

[coverage:xml]
;; Used by the CI (so it can collect test-case-wise failure/success stats)
output = coverage.xml


[flake8]
max-line-length = 100
doctests = True
exclude = .git, .eggs, __pycache__, docs/, build/, dist/


[isort]
atomic = True
# check_only = True
combine_as_imports = True
combine_star = True
default_section=THIRDPARTY
force_sort_within_sections = True
include_trailing_comma = True
indent = '    '
known_future_library=future
known_first_party=dockerfixtures
length_sort = False
line_length = 100
lines_after_imports = 2
order_by_type = False
multi_line_output = 1
sections=FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER


[metadata]
author = Nicolas CANIART
author_email = nicolas@caniart.net
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules
    Typing :: Typed
description = Cointainers as Pytest fixtures made easy
home_page = https://github.com/cans/python-docker-fixtures
keywords = docker, testing, fixtures
long_description = file: README.rst, CHANGELOG.rst
long_description_content_type = text/x-rst
license = GPLv2
license_file = COPYING
name = dockerfixtures
platform = any
project_urls=
    Code = https://github.com/cans/python-docker-fixtures
    Issue-tracker = https://github.com/cans/python-docker-fixtures/issues
url = https://github.com/cans/python-docker-fixtures
;; version = file: VERSION

[options]
include_package_data = true
install_requires =
    docker~=4.1
packages = find:
package_dir =
    =src
python_requires = >= 3.7, <3.12
zip_safe = true

[options.extras_require]
dev =
    build
    coverage
    kafka-python
    pdbpp; python_version < "3.9"
    ipdb; python_version >= "3.9"
    pre-commit<2.10.0
    pytest
    pytest-cov
    pytest-mock
    Sphinx
    twine

[options.packages.find]
where = src

[pydocstyle]
match-dir = (?!tests)(?!resources)(?!docs)[^\.].*
match = (?!test)(?!setup)[^\._].*\.py
inherit = false
ignore = D200, D203, D213, D406, D407   # Google conventions

[sdist]
formats = zip, gztar

[tool:pytest]
addopts = -v --ignore src --cov=dockerfixtures --cov-report=html
